crates/shipper-webhook/src/snapshots/shipper_webhook__tests__snapshot_tests__config_discord_no_secret.snap
---
source: crates/shipper-webhook/src/lib.rs
expression: json
---
timeout_secs: 60
url: "https://discord.com/api/webhooks/123/abc"
webhook_type: Discord
