crates/shipper-webhook/src/snapshots/shipper_webhook__tests__snapshot_tests__config_generic_default.snap
---
source: crates/shipper-webhook/src/lib.rs
expression: json
---
timeout_secs: 30
url: "https://example.com/webhook"
webhook_type: Generic
