crates/shipper-webhook/src/snapshots/shipper_webhook__tests__snapshot_tests__config_slack_with_secret.snap
---
source: crates/shipper-webhook/src/lib.rs
expression: config
---
WebhookConfig {
    url: "<redacted>",
    webhook_type: Slack,
    secret: Some(
        "<redacted>",
    ),
    timeout_secs: 10,
}
