crates/shipper-webhook/src/snapshots/shipper_webhook__tests__snapshot_tests__discord_success_payload.snap
---
source: crates/shipper-webhook/src/lib.rs
expression: json
---
embeds:
  - color: 65280
    description: Successfully published my-crate@1.2.3
    fields:
      - inline: true
        name: Package
        value: my-crate
      - inline: true
        name: Version
        value: 1.2.3
      - inline: true
        name: Registry
        value: crates-io
    title: Package Published
