crates/shipper-webhook/src/snapshots/shipper_webhook__tests__snapshot_tests__error_send_failure.snap
---
source: crates/shipper-webhook/src/lib.rs
expression: err.to_string()
---
failed to send webhook request
