crates/shipper-webhook/src/snapshots/shipper_webhook__tests__snapshot_tests__error_status_403.snap
---
source: crates/shipper-webhook/src/lib.rs
expression: err.to_string()
---
webhook request failed with status 403 Forbidden: bad
