crates/shipper-webhook/src/snapshots/shipper_webhook__tests__snapshot_tests__error_status_500.snap
---
source: crates/shipper-webhook/src/lib.rs
expression: err.to_string()
---
webhook request failed with status 500 Internal Server Error: internal error
