crates/shipper-webhook/src/snapshots/shipper_webhook__tests__snapshot_tests__generic_payload_with_extras.snap
---
source: crates/shipper-webhook/src/lib.rs
expression: json
---
ci: github-actions
message: deployed
package: my-crate
registry: crates-io
run_id: 42
success: true
title: Deploy
version: 1.0.0
